--- a/main.html
+++ b/main.html
@@ -10,10 +10,7 @@
     </style>
 </head>
 <body>
-
-        <div class="container">
-            <div id="line" ></div>
-        </div>
-  
+  <script type="text/javascript" src="./script.js">
+  </script>
 </body>
 </html>
